Fixing styling on updates.
LEARNER-1879

Issues with images overflowing over their container divs and images being too large for the containing div. Also did a bit of cleanup to improve scss quality.

--- a/cms/static/sass/views/_updates.scss
+++ b/cms/static/sass/views/_updates.scss
@@ -141,6 +141,11 @@
       background: none;
       padding: 0;
     }
+
+    img {
+      margin: $baseline/2;
+      max-width: 100%;
+    }
   }
 
 
